objects/tffa__PromotionPlan__c.object
<CustomObject>
    <description>A promotion plan defines a strategy for implementing a promotion. Includes channel, location where the promotion is applicable. Also includes product category and product, the promotion is applicable to. A plan is typically used to validate a promotion based on these constraints. It can also be used to apply products (given a promo code).</description>
    <fields>
        <fullName>Interest_Plan_Code__c</fullName>
        <description>Interest plan code associated to the promotion plan, accepts text as input</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Plan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCodeSet__c</fullName>
        <description>State codes eligible for the Promotion plan, support multiple values (separated by a semicolon)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;IL;</inlineHelpText>
        <label>State Code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AddressStateSet__c</fullName>
        <description>A set of states (geographical region of a country) used as a fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Address State (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Unique code of brands servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCodeSet__c</fullName>
        <description>Unique product bundle code maintained in the system as a fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;BUNDLECHECKING;</inlineHelpText>
        <label>Bundle code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>Allowed channels for the promotion plan.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier for the promotion plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id of the brand as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCodeSet__c</fullName>
        <description>Unique code of location (branch) servicing the submission. A fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Location code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the party (primary applicant in the application) in the bank - CUSTOMER, PROSPECT. A fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>Allowed product categories for the promotion plan.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Allowed product for the promotion plan.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Promotion Plans</relationshipLabel>
        <relationshipName>PromotionPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <description>Reference to the parent promotion object</description>
        <label>Promotion</label>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>